--- a/bemani/frontend/static/themes/default/form.css
+++ b/bemani/frontend/static/themes/default/form.css
@@ -74,7 +74,7 @@ input[type="text"], input[type="password"], textarea {
 
 select {
     border: 1px solid #dadada;
-    padding: 4px 4px 3px 4px;
+    padding: 4px 4px 4px 4px;
     border-radius: 0px;
 }
 
